@@ -1,12 +1,17 @@
 package com.ecommerce.Service.Impl;
 
 import com.ecommerce.Dto.DeliveryOrder;
+import com.ecommerce.Errors.CustomError;
+import com.ecommerce.Exceptions.OrderDoesNotExist;
 import com.ecommerce.Mapper.OrderDetailsMapper;
+import com.ecommerce.Models.Order;
 import com.ecommerce.Models.OrderDetails;
+import com.ecommerce.Models.OrderStatus;
 import com.ecommerce.Repository.OrderDetailsRepository;
+import com.ecommerce.Repository.OrderRepository;
 import com.ecommerce.Service.OrderDetailsService;
 import org.springframework.stereotype.Service;
-
+import static com.ecommerce.Utils.ErrorConstants.*;
 import java.util.List;
 
 @Service
@@ -16,9 +21,12 @@ public class OrderDetailsServiceImpl implements OrderDetailsService {
 
     private final OrderDetailsRepository orderDetailsRepository;
 
-    public OrderDetailsServiceImpl(OrderDetailsMapper orderDetailsMapper, OrderDetailsRepository orderDetailsRepository) {
+    private final OrderRepository orderRepository;
+
+    public OrderDetailsServiceImpl(OrderDetailsMapper orderDetailsMapper, OrderDetailsRepository orderDetailsRepository, OrderRepository orderRepository) {
         this.orderDetailsMapper = orderDetailsMapper;
         this.orderDetailsRepository = orderDetailsRepository;
+        this.orderRepository = orderRepository;
     }
 
     private DeliveryOrder convertEntityToDto(OrderDetails orderDetails){
@@ -26,10 +34,41 @@ public class OrderDetailsServiceImpl implements OrderDetailsService {
     }
 
     @Override
-    public List<DeliveryOrder> getAllDeliveryOrders(){
-        return orderDetailsRepository.findAll()
-                .stream()
-                .map(this::convertEntityToDto)
-                .toList();
+    public List<OrderDetails> getAllDeliveryOrders(){
+
+        return orderDetailsRepository.findAll();
+//                .stream()
+//                .map(this::convertEntityToDto)
+//                .collect(Collectors.toList());
+    }
+
+    @Override
+    public OrderDetails changeOrderStatusToDelivering(Long id) throws CustomError {
+
+        if(!orderRepository.existsById(id)){
+            throw  new OrderDoesNotExist(ORDER_DOES_NOT_EXIST_MESSAGE, ORDER_DOES_NOT_EXIST_CODE);
+        }
+        Order order = orderRepository.getReferenceById(id);
+
+        OrderDetails newOrderDetails = order.getOrderDetails();
+
+        newOrderDetails.setOrderStatus(OrderStatus.Delivering);
+        orderDetailsRepository.saveAndFlush(newOrderDetails);
+        return newOrderDetails;
+    }
+
+    @Override
+    public OrderDetails changeOrderStatusToDelivered(Long id) throws CustomError {
+
+        if(!orderRepository.existsById(id)){
+            throw  new OrderDoesNotExist(ORDER_DOES_NOT_EXIST_MESSAGE, ORDER_DOES_NOT_EXIST_CODE);
+        }
+        Order order = orderRepository.getReferenceById(id);
+
+        OrderDetails newOrderDetails = order.getOrderDetails();
+
+        newOrderDetails.setOrderStatus(OrderStatus.Delivered);
+        orderDetailsRepository.saveAndFlush(newOrderDetails);
+        return newOrderDetails;
     }
 }
